Agregado el contenido adicional del blog y una mejor tipografia

--- a/articulo.html
+++ b/articulo.html
@@ -11,6 +11,11 @@
                 <p>Y este es el parrafo de 
                     inicio donde vamos a explicar
                     las cosas interesantes de Git</p>
+                <p>Los blogs son la mejor forma de 
+                    compartir la informacion y tus ideas
+                    mucho meas que ir a conferencias o salir
+                    en televison
+                </p>
             </div>
         </div>
     </body>
