Modifique la cabecera y Agregue suscripcion, cambie cabecera, y puse todo azul

--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog de maestro
                 </span>
             </div>
             <div id="post">
@@ -20,6 +20,7 @@
                     compartir la informacion y tus ideas
                     mucho meas que ir a conferencias o salir
                     en televison
+                    <p>Suscribete y dale like</p>
                 </p>
             </div>
         </div>
