--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog <span id="tagline">
-                    Es mi blog de cabecera
+                    Bienvenido a Hyperblog
                 </span>
             </div>
             <div id="post">
