--- a/articulo.html
+++ b/articulo.html
@@ -1,28 +1,24 @@
 <html>
     <head>
-        <title>Bienvenidos a Hyperblog 2.0</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/stilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">
-                    Bienvenido a Hyperblog
-                </span>
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el titulo atractivo 
-                    e interesante del post </h1>
-                <p>Y este es el parrafo de 
-                    inicio donde vamos a explicar
-                    las cosas interesantes de Git</p>
-                <p>Los blogs son la mejor forma de 
-                    compartir la informacion y tus ideas
-                    mucho meas que ir a conferencias o salir
-                    en televison
-                    <p>Suscribete y dale like</p>
-                </p>
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like , soy anita la huerfanita xd</p>
+            <div id="footer">
+                Hecho con amor en duvns
+            </div>
             </div>
         </div>
     </body>
-</html> 
+</html>
